made the extension have higher contrast fixes #378

--- a/client/app/styles/display-box.scss
+++ b/client/app/styles/display-box.scss
@@ -74,12 +74,17 @@
 }
 .name-container {
     position: absolute;
-    bottom: 0.2em;
-    left: 0.2em;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     pointer-events: none;
+    background: linear-gradient(to top, hsla(0,0%,0%,0.9) 0%,hsla(0,0%,0%,0) 100%);
     h1{
         color: red;
         font-size: 125%;
+        span.small {
+            color: white;
+            }
     }
 }
 .problem-btn {
